<resources>
    <string name="app_name">Dual Screen POS</string>
    <string name="not_connected">Not connected</string>
    <string name="settings">Settings</string>
    <string name="rfid_icon">RFID icon</string>
    <string name="scan_item_to_return">SCAN ITEM TO RETURN</string>
    <string name="scan_item">SCAN ITEM</string>
    <string name="no_transactions_yet">No transactions yet</string>
    <string name="place_item_on_reader">Place item on reader</string>
    <string name="reading_for_2s">Reading for 2 seconds…</string>
    <string name="select_return_bin">Select Return Bin</string>
    <string name="return_to_store">Return to Store</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm_return">CONFIRM RETURN</string>
    <string name="processing_return">Processing return…</string>
    <string name="return_accepted">RETURN ACCEPTED</string>
    <string name="returning_home_4s">Returning to home in 4s…</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="welcome">Welcome</string>
    <string name="place_item_prompt">Please place item on reader when prompted</string>
    <string name="store_logo">Store logo</string>
</resources>
