<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSuccess">

    <ImageView
        android:id="@+id/iv_check"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_check_circle"
        android:contentDescription="@string/success"
        android:scaleX="0"
        android:scaleY="0"
        app:tint="@color/colorSuccessAccent"
        app:layout_constraintBottom_toTopOf="@+id/tv_return_accepted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_return_accepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/return_accepted"
        android:textColor="@color/colorSuccessAccent"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_success_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_check"/>

    <TextView
        android:id="@+id/tv_success_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_return_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_return_accepted"/>

    <TextView
        android:id="@+id/tv_return_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/returning_home_4s"
        android:textColor="@color/colorTextSecondary"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_success_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>
