<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/iv_rfid_icon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_rfid"
        android:contentDescription="@string/rfid_icon"
        app:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/tv_scan_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_scan_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scan_item_to_return"
        android:textColor="@color/colorTextSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_rfid_icon"/>

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/scan_item"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_stock_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_scan_hint"/>

    <Button
        android:id="@+id/btn_stock_check"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="STOCK CHECK"
        android:textSize="14sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/colorAccent"
        app:strokeColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_scan"/>


</androidx.constraintlayout.widget.ConstraintLayout>
