<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorError">

    <ImageView
        android:id="@+id/iv_error_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_error"
        android:contentDescription="@string/error"
        app:tint="@color/colorErrorAccent"
        app:layout_constraintBottom_toTopOf="@+id/tv_error_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_error_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_error_icon"/>

    <LinearLayout
        android:id="@+id/layout_error_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/try_again"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btn_cancel_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/colorTextPrimary"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
