<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D0D1A">

    <ImageView
        android:id="@+id/iv_store_logo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_store_logo"
        android:contentDescription="@string/store_logo"
        app:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="28sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name"/>

    <TextView
        android:id="@+id/tv_bottom_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/place_item_prompt"
        android:textAlignment="center"
        android:textColor="@color/colorTextSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
